css/index.css
html {
  scroll-behavior: smooth;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  color: white;
}

body {
  background-color: rgb(29, 29, 31);
}

section {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 50px;
  min-height: 100vh;
}

h3 {
  font-family: "Noto Sans", sans-serif;
}
h1 {
  padding: 0;
  margin: 0;
  font-family: "Noto Sans", sans-serif;
}

h2 {
  font-size: 48px;
  font-family: "Noto Sans", sans-serif;
}

p {
  font-family: "Noto Sans", sans-serif;
}
a {
  text-decoration: none;
}
.hero {
  min-height: 500px;
}

.hero-container {
  margin-top: 140px;
  display: flex;
  flex-direction: column;
}

.hero h1 {
  gap: 0;
  display: flex;
  line-height: 70px;
  letter-spacing: 2px;
  font-size: 64px;
  flex-direction: column;
  justify-content: left;
}

.hero button {
  color: rgb(10, 10, 10);
  margin: 20px;
  border: none;
  border-radius: 15px;
  padding: 15px;
  font-family: 300;
  font-size: 18px;
  align-self: flex-end;
  transition: ease 0.3s;
}

.hero button:hover {
  background-color: #158182;
}

img {
  object-fit: contain;
  object-position: center;
  width: 100%;
}

nav {
  position: fixed;
  justify-content: space-between;
  background-color: rgba(29, 29, 31, 0.8);
  align-items: center;
  z-index: 99;
}

nav > a {
  margin: 0 30px;
  max-width: 200px;
}

nav > a > img {
  min-width: 120px;
  height: 120px;
}

.nav-items {
  display: flex;
  flex: 1 1 0;
  max-width: 600px;
  font-size: 18px;
  padding: 0 40px;
  justify-content: space-between;
}

.nav-items a {
  transition: ease 0.3s;
  cursor: pointer;
}

.nav-items a:hover {
  color: #21dadb;
}

.navbar-toggle {
  display: none;
  flex-direction: column;
  cursor: pointer;
  gap: 4px;
  background-color: transparent;
  border: none;
  margin: 40px;
  font-size: 35px;
  width: 30px;
  height: 35px;
  padding: 2px;
  justify-content: center;
  align-items: center;
}

.bar {
  width: 25px;
  height: 3px;
  background-color: white;
  transition: 0.3s;
}

@media (min-width: 700px) {
  .nav-items {
    opacity: 100% !important;
  }
}

@media (max-width: 700px) {
  .hero h1 {
    font-size: 40px;
    line-height: 62px;
  }

  .nav-items {
    display: none;
  }

  .nav-items.active {
    display: flex;
    flex-direction: column;
    background: rgba(33, 33, 33, 1);
    padding: 50px;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    left: 0;
    top: 0;
    width: 50%;
    height: 100vh;
  }
  .navbar-toggle {
    display: flex;
    flex-direction: column;
  }
}

@media (max-width: 540px) {
  .hero h1 {
    font-size: 30px;
  }

  .hero button {
    font-size: 15px;
  }

  .hero-container {
    margin-top: 80px;
  }
}

